--- a/ZTV WZIP/Main.storyboard
+++ b/ZTV WZIP/Main.storyboard
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14D87h" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14D105g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--WZIP-->
         <scene sceneID="jke-s9-IgH">
             <objects>
-                <viewController title="WZIP" id="wTl-i6-Dif" sceneMemberID="viewController">
+                <viewController title="WZIP" id="wTl-i6-Dif" customClass="WZIPMainViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="1y7-Nk-8z2"/>
                         <viewControllerLayoutGuide type="bottom" id="QEf-rj-xbR"/>
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="s24354q" translatesAutoresizingMaskIntoConstraints="NO" id="yhz-wz-RFr">
+                            <imageView userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="userlogo276x155" translatesAutoresizingMaskIntoConstraints="NO" id="yhz-wz-RFr">
                                 <rect key="frame" x="142" y="20" width="316" height="257"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="257" id="Unu-GD-Lb2"/>
@@ -47,10 +47,10 @@
             </objects>
             <point key="canvasLocation" x="0.0" y="699"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Primary Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
             <objects>
-                <tabBarController id="49e-Tb-3d3" sceneMemberID="viewController">
+                <tabBarController id="49e-Tb-3d3" customClass="PrimaryTabBarController" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
@@ -70,7 +70,7 @@
         <!--ZTV-->
         <scene sceneID="ZFo-k8-wPA">
             <objects>
-                <viewController title="ZTV" id="eSH-S8-nY4" sceneMemberID="viewController">
+                <viewController title="ZTV" id="eSH-S8-nY4" customClass="ZTVMainViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="qsu-rq-ELG"/>
                         <viewControllerLayoutGuide type="bottom" id="mLJ-16-mqV"/>
@@ -85,7 +85,7 @@
                                     <segue destination="USo-h6-Ah3" kind="embed" id="TE7-sz-5Vm"/>
                                 </connections>
                             </containerView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ztvlogo" translatesAutoresizingMaskIntoConstraints="NO" id="STn-7k-MAE">
+                            <imageView userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ztvlogo" translatesAutoresizingMaskIntoConstraints="NO" id="STn-7k-MAE">
                                 <rect key="frame" x="16" y="20" width="568" height="195"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="195" id="Mc6-SK-t4g"/>
@@ -419,6 +419,23 @@
                                             <segue destination="OCl-Sg-KNR" kind="presentation" identifier="wzipFacebook" id="ez6-iv-Sn6"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="oKJ-7w-Qgj" style="IBUITableViewCellStyleDefault" id="bpJ-Lx-r23">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bpJ-Lx-r23" id="Ad3-ho-3I6">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Sports Power Talk" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="oKJ-7w-Qgj">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="OCl-Sg-KNR" kind="presentation" identifier="sptFacebook" id="rOA-xg-91D"/>
+                                        </connections>
+                                    </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="oTK-Al-J8T" style="IBUITableViewCellStyleDefault" id="F47-Dn-fXD">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="F47-Dn-fXD" id="XBQ-F9-epo">
@@ -557,6 +574,23 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <segue destination="OCl-Sg-KNR" kind="presentation" identifier="wzipTwitter" id="CiC-YU-XME"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="cIt-wz-vbE" style="IBUITableViewCellStyleDefault" id="b6v-TO-Ufu">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="b6v-TO-Ufu" id="2bk-4p-RIM">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Sports Power Talk" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="cIt-wz-vbE">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="OCl-Sg-KNR" kind="presentation" identifier="sptTwitter" id="gFs-vr-s0P"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="wag-ka-YKJ" style="IBUITableViewCellStyleDefault" id="AbY-sC-Ve1">
@@ -767,12 +801,12 @@
         <image name="mq1" width="120" height="120"/>
         <image name="next" width="11" height="21"/>
         <image name="previous" width="11" height="21"/>
-        <image name="s24354q" width="72" height="72"/>
         <image name="undergradz" width="50" height="50"/>
+        <image name="userlogo276x155" width="138" height="76"/>
         <image name="ztvlogo" width="80" height="47"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="cvJ-Pu-93T"/>
+        <segue reference="gFs-vr-s0P"/>
         <segue reference="JZ4-Mi-RPE"/>
     </inferredMetricsTieBreakers>
 </document>
